--- a/index.html
+++ b/index.html
@@ -25,34 +25,34 @@
                 <!-- Category 1: Eye Videos -->
                 <h8 onclick="toggleCategory('normal')">Normal</h8>
                 <ul id="normal" style="display:none;">
-                    <li><button onclick="loadVideo('eye/normal/eye_with_number.mp4')">Healthy Eye</button></li>
+                    <li><button onclick="loadVideo('eye_with_number.mp4')">Healthy Eye</button></li>
                 </ul>
 
                 <h8 onclick="toggleCategory('aberration')">Spherical Aberration</h8>
                 <ul id="aberration" style="display:none;">
-                    <li><button onclick="loadVideo('eye/aberration/lens_with_spherical_aberration.mp4')">Lens with spherical aberration</button></li>
-                    <li><button onclick="loadVideo('eye/aberration/eye_with_spherical_aberration.mp4')">Eye with spherical aberration</button></li>
+                    <li><button onclick="loadVideo('lens_with_spherical_aberration.mp4')">Lens with spherical aberration</button></li>
+                    <li><button onclick="loadVideo('eye_with_spherical_aberration.mp4')">Eye with spherical aberration</button></li>
                 </ul>
 
                 <h8 onclick="toggleCategory('astigmatic')">Astigmation</h8>
                 <ul id="astigmatic" style="display:none;">
-                    <li><button onclick="loadVideo('eye/astigmatic/astigmatic_lens.mp4')">Astigmatic lens</button></li>
-                    <li><button onclick="loadVideo('eye/astigmatic/astigmatic_lens_with_correction.mp4')">Astigmatic lens with corrections</button></li>
-                    <li><button onclick="loadVideo('eye/astigmatic/astigmatic_eye.mp4')">Astigmatic eye</button></li>
-                    <li><button onclick="loadVideo('eye/astigmatic/astigmatic_eye_with_correction.mp4')">Astigmatic eye with correction lens</button></li>
+                    <li><button onclick="loadVideo('stigmatic_lens.mp4')">Astigmatic lens</button></li>
+                    <li><button onclick="loadVideo('astigmatic_lens_with_correction.mp4')">Astigmatic lens with corrections</button></li>
+                    <li><button onclick="loadVideo('astigmatic_eye.mp4')">Astigmatic eye</button></li>
+                    <li><button onclick="loadVideo('eastigmatic_eye_with_correction.mp4')">Astigmatic eye with correction lens</button></li>
                 </ul>
 
                 <!-- Category 2: Myopia Videos -->
                 <h8 onclick="toggleCategory('myopia')">Myopia</h8>
                 <ul id="myopia" style="display:none;">
-                    <li><button onclick="loadVideo('eye/myopia/myopia.mp4')">Myopia</button></li>
-                    <li><button onclick="loadVideo('eye/myopia/myopia_with_correction.mp4')">Myopia with correction</button></li>
+                    <li><button onclick="loadVideo('myopia.mp4')">Myopia</button></li>
+                    <li><button onclick="loadVideo('myopia_with_correction.mp4')">Myopia with correction</button></li>
                 </ul>
 
                 <h8 onclick="toggleCategory('hyperopia')">Hyperopia</h8>
                 <ul id="hyperopia" style="display:none;">
-                    <li><button onclick="loadVideo('eye/hyperopia/hyperopia.mp4')">Hyperopia</button></li>
-                    <li><button onclick="loadVideo('eye/hyperopia/hyperopia_with_correction.mp4')">Hyperopia with correction</button></li>
+                    <li><button onclick="loadVideo('hyperopia.mp4')">Hyperopia</button></li>
+                    <li><button onclick="loadVideo('hyperopia_with_correction.mp4')">Hyperopia with correction</button></li>
                 </ul>
 
 
