--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
                 <h7>Choose a Video</h7>
 
                 <!-- Category 1: Eye Videos -->
-                <h8 onclick="toggleCategory('normal')">Normal</h8>
+                <button onclick="toggleCategory('normal')">Normal</button>
                 <ul id="normal" style="display:none;">
-                    <li><button onclick="loadVideo('eye_with_number.mp4')">Healthy Eye</button></li>
+                    <li><button onclick="loadVideo('eye/normal/eye_with_number.mp4')">Healthy Eye</button></li>
                 </ul>
 
                 <h8 onclick="toggleCategory('aberration')">Spherical Aberration</h8>
