--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <!-- Category 1: Eye Videos -->
                 <h8 onclick="toggleCategory('normal')">Normal</h8>
                 <ul id="normal" style="display:none;">
-                    <li><button onclick="loadVideo('eye/normal/eye_with_number.mp4')">Healthy Eye</button></li>
+                    <li><button onclick="loadVideo('eye_with_number.mp4')">Healthy Eye</button></li>
                 </ul>
 
                 <h8 onclick="toggleCategory('aberration')">Spherical Aberration</h8>
