--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <h7>Choose a Video</h7>
 
                 <!-- Category 1: Eye Videos -->
-                <span onclick="toggleCategory('normal')">Normal</span>
+                <h8 onclick="toggleCategory('normal')">Normal</h8>
                 <ul id="normal" style="display:none;">
                     <li><button onclick="loadVideo('eye_with_number.mp4')">Healthy Eye</button></li>
                 </ul>
