--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
             <div class="category-item" onclick="toggleCategory('astigmatic')">Astigmation</div>
             <ul id="astigmatic" style="display:none;">
-                <li><button onclick="loadVideo('stigmatic_lens.mp4')">Astigmatic lens</button></li>
+                <li><button onclick="loadVideo('astigmatic_lens.mp4')">Astigmatic lens</button></li>
                 <li><button onclick="loadVideo('astigmatic_lens_with_correction.mp4')">Astigmatic lens with corrections</button></li>
                 <li><button onclick="loadVideo('astigmatic_eye.mp4')">Astigmatic eye</button></li>
                 <li><button onclick="loadVideo('eastigmatic_eye_with_correction.mp4')">Astigmatic eye with correction lens</button></li>
